Fixes #884: Control spill over of button when using non-eng lang pack

--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -3906,7 +3906,7 @@ strong, b, th{
 
 .ModulemanagerSettings:hover .actions{
     opacity: 1;
-    background:@ModulemanagerSettingshover;
+    /* background:@ModulemanagerSettingshover; */
 }
 
 #OutgoingMoretable td,th{
